Issue #2988183 by TJPope: Form required marker "\204E" is broken in Chrome on Windows

--- a/css/style.css
+++ b/css/style.css
@@ -258,11 +258,16 @@ html.js .ajax-new-content:empty {
       color: #8a6d3b; }
 
 .form-required:after {
+  content:"";
+  background-image: url(../images/required.svg);
+  display: inline-block;
+  line-height:1;
   color: #e00;
-  /* Use a Unicode symbol to prevent screen-readers from announcing the text. */
-  content: " \204E ";
-  line-height: 1;
-  vertical-align: super; }
+  background-size:7px 7px;
+  width: 7px;
+  vertical-align: super;
+  margin-left: 4px;
+  height: 7px; }
 
 .form-item h4.label {
   border: none;
